Attempted to add slice test for category controller.